# agriculture-api-WeGro-Assignment-shojebete18

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: database.py  enum.py  exceptions.py
app/routers/: crops.py  farms.py  markets.py
app/services/: crop_service.py  farm_service.py  market_service.py
